--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
@@ -126,10 +126,10 @@
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: displayedColumns;" matRipple class="element-row"
                         [class.expanded]="expandedElement == row"></mat-row>
-                    <mat-row *matRowDef="let row; columns: ['expandedDetail']; when: isExpansionDetailRow"
+                    <!-- <mat-row *matRowDef="let row; columns: ['expandedDetail']; when: isExpansionDetailRow"
                         [@detailExpand]="row.element == expandedElement ? 'expanded' : 'collapsed'"
                         style="overflow: hidden">
-                    </mat-row>
+                    </mat-row> -->
                 </mat-table>
             </div>
         </div> 
