--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -73,7 +73,7 @@
                 </form>
                 <div class="alert alert-success" *ngIf="isSuccessful">
                     Please check and click on the link provided in your email for verification.
-                    <button [disabled]="loading" style="margin: 15px;" class="mat-raised-button" (click)="gotologin()">click to login</button>    
+                    <button [disabled]="loading" style="margin: 15px;" class="mat-raised-button" (click)="selectapps()">Select Applications</button>    
                 </div>
             </div>
         <!-- </div> -->
