--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.html
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-title></mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
-    <mat-card-content style="min-height: 100vh;display: flex; justify-content: center;align-items: center">        
+    <mat-card-content style="min-height: 100vh;margin-top:-100px; display: flex;flex-direction: column; align-items:center;justify-content: center;">        
             <form [formGroup]="searchForm">
                 <mat-form-field [style.width.px]="250" appearance="outline">
                     <mat-select formControlName="searchApplicationId">
