--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Login</mat-card-title>
+    <mat-card-title style="margin:100px 0px 0px 100px;">Login</mat-card-title>
     <mat-card-content>
         <div class="container" fxLayout="row wrap" fxLayoutAlign="space-around center">
             <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
