--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -16,8 +16,9 @@ button{
 }
 .mat-card{
     position: relative;
-    margin-top:15px; 
-    max-height: 350px;
+    margin-top:100px; 
+    height: 350px;
+    width: 50%;
 }
 .width100{
     width: 100%;
