--- a/src/app/modules/control/settingboard/settingboard.component.html
+++ b/src/app/modules/control/settingboard/settingboard.component.html
@@ -1,10 +1,9 @@
 <mat-card>
     <mat-card-title>Initial Settings</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content>
-        <div style="margin:5px">
-            <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px">
-                <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
+    <mat-card-content style="margin:5px;max-height: inherit;">
+            <!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px"> -->
+                <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)" mat-stretch-tabs>
                     <mat-tab>
                         <ng-template mat-tab-label>
                             <mat-icon>first_page</mat-icon> Essential Data
@@ -29,11 +28,10 @@
                         </ng-template>
                         <app-roleuserdashboard></app-roleuserdashboard>
                     </mat-tab>
-
                     <mat-tab>
                         <ng-template mat-tab-label>
                             <mat-icon>apps
-                            </mat-icon> Application Role Permission
+                            </mat-icon> Role Feature Permission
                         </ng-template>
                         <app-RoleAppPermissiondashboard></app-RoleAppPermissiondashboard>
                     </mat-tab>
@@ -51,8 +49,15 @@
                         </ng-template>
                         <app-variable-config></app-variable-config>
                     </mat-tab>
+                    <mat-tab>
+                        <ng-template mat-tab-label>
+                            <mat-icon>change_history
+                            </mat-icon> Report Config
+                        </ng-template>
+                        <app-userreportconfig></app-userreportconfig>
+                    </mat-tab>                    
                 </mat-tab-group>
-            </div>
-        </div>
+            <!-- </div> -->
+       
     </mat-card-content>
 </mat-card>
