--- a/src/app/modules/appconfigdata/userreportconfigColumns/userreportconfigcolumns.component.html
+++ b/src/app/modules/appconfigdata/userreportconfigColumns/userreportconfigcolumns.component.html
@@ -1,10 +1,10 @@
 <div style="max-height: inherit;">
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Report Configuration</strong></div>
+        <div><strong>Report Column</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
-    <div style="padding: 15px;" fxLayout="row wrap">
+    <div style="padding: 15px" fxLayout="row wrap">
         <div style="width: 100%;">
             <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="space-between center">
                 <div fxLayout="row" fxLayoutGap="15px" fxLayoutAlign="space-around center">
@@ -19,16 +19,15 @@
                     <mat-form-field appearance="outline">
                         <mat-label>Available Reports</mat-label>
                         <mat-select formControlName="searchAvailableReportName" (selectionChange)="GetMyReportNames()">
-                            <mat-option>--select report name--</mat-option>
                             <mat-option *ngFor="let item of AvailableReportNames" [value]="item.ReportConfigItemId">
                                 {{item.ReportName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field appearance="outline">
-                        <mat-label>Report Name</mat-label>
+                        <mat-label>My Report Name</mat-label>
                         <mat-select formControlName="searchReportName">
-                            <mat-option>--select report name--</mat-option>
+                            <mat-option>--select my report name--</mat-option>
                             <mat-option *ngFor="let item of AppReportNames" [value]="item.ReportConfigItemId">
                                 {{item.ReportName}}
                             </mat-option>
@@ -40,38 +39,36 @@
                     </button>
                 </div>
             </form>
-            <i>Not select report name is adding/editing report name, otherwise report columns.</i>
             <mat-table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="ReportName">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Column Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element.ReportName}}
+                           {{element.ReportName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="DisplayName">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Display Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="200" appearance="outline">
-                            <input matInput [value]="element.DisplayName"
-                                [(ngModel)]="element.DisplayName" autocomplete="Off" placeholder=""
-                                (blur)="onBlur(element)" [minlength]="1" [maxlength]="50">
+                        <mat-form-field [style.width.pc]="10" appearance="outline">
+                            <input matInput [value]="element.DisplayName" [(ngModel)]="element.DisplayName"
+                                autocomplete="Off" placeholder="" (blur)="onBlur(element)" [minlength]="1"
+                                [maxlength]="50">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Formula">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Formula </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="200" appearance="outline">
+                        <mat-form-field [style.width.pc]="10" appearance="outline">
                             <textarea matInput [value]="element.Formula" [(ngModel)]="element.Formula"
-                                autocomplete="Off" (blur)="onBlur(element)" [maxlength]="256"></textarea>
+                                autocomplete="Off" (blur)="onBlur(element)" [maxlength]="3000"></textarea>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
-               
                 <ng-container matColumnDef="TableNames">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Table Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="200" appearance="outline">
+                        <mat-form-field [style.width.pc]="10" appearance="outline">
                             <input matInput [value]="element.TableNames" [(ngModel)]="element.TableNames"
                                 autocomplete="Off" (blur)="onBlur(element)" [maxlength]="50">
                         </mat-form-field>
@@ -80,7 +77,7 @@
                 <ng-container matColumnDef="ColumnSequence">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Sequence </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="50" appearance="outline">
+                        <mat-form-field [style.width.pc]="4" appearance="outline">
                             <input type="number" matInput [value]="element.ColumnSequence"
                                 [(ngModel)]="element.ColumnSequence" autocomplete="Off" (blur)="ReSequence(element)"
                                 [max]="100">
@@ -102,7 +99,8 @@
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
+                            mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
