--- a/src/app/modules/classes/classboard/classboard.component.html
+++ b/src/app/modules/classes/classboard/classboard.component.html
@@ -18,6 +18,14 @@
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
+                        <mat-icon>payments
+                        </mat-icon> Fee Types
+                    </ng-template>
+                    <app-school-fee-types></app-school-fee-types>
+                </mat-tab>
+
+                <mat-tab>
+                    <ng-template mat-tab-label>
                         <mat-icon>foundation</mat-icon> Pre-requisites
                     </ng-template>
                     <app-classprerequisite></app-classprerequisite>
