generic report added

--- a/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
+++ b/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
@@ -8,7 +8,7 @@
             <mat-tab>
                 <ng-template mat-tab-label>
                     <mat-icon>change_history
-                    </mat-icon> Report Name
+                    </mat-icon> Reports
                 </ng-template>
                 <app-getreport></app-getreport>
             </mat-tab>
