report nested value issue

--- a/src/app/modules/appconfigdata/configboard/configboard.component.html
+++ b/src/app/modules/appconfigdata/configboard/configboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Application Configuration</mat-card-title>
+    <mat-card-title>Report Configuration</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:5px;max-height: inherit;">
             <!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px"> -->
