--- a/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
+++ b/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Configured Reports</mat-card-title>
+    <mat-card-title></mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:5px;max-height: inherit;">
         <!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px"> -->
@@ -8,7 +8,7 @@
             <mat-tab>
                 <ng-template mat-tab-label>
                     <mat-icon>change_history
-                    </mat-icon> Reports
+                    </mat-icon> Configured Reports
                 </ng-template>
                 <app-getreport></app-getreport>
             </mat-tab>
