--- a/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
+++ b/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
@@ -41,7 +41,7 @@
                             </mat-form-field>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="DisplayName">
+                <!--<ng-container matColumnDef="DisplayName">
                     <mat-header-cell *matHeaderCellDef> Display Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field [style.width.pc]="10" appearance="outline">
@@ -51,7 +51,7 @@
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
-                <!-- <ng-container matColumnDef="Formula">
+                 <ng-container matColumnDef="Formula">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Formula </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field [style.width.pc]="10" appearance="outline">
@@ -59,8 +59,8 @@
                                 autocomplete="Off" (blur)="onBlur(element)" [maxlength]="256"></textarea>
                         </mat-form-field>
                     </mat-cell>
-                </ng-container> -->
-                <ng-container matColumnDef="TableNames">
+                </ng-container>
+                 <ng-container matColumnDef="TableNames">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Table Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field [style.width.pc]="10" appearance="outline">
@@ -68,7 +68,7 @@
                                 autocomplete="Off" (blur)="onBlur(element)" [maxlength]="50">
                         </mat-form-field>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <!-- <ng-container matColumnDef="ColumnSequence">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Sequence </mat-header-cell>
                     <mat-cell *matCellDef="let element">
