--- a/src/app/modules/generalreport/getreport/getreport.component.html
+++ b/src/app/modules/generalreport/getreport/getreport.component.html
@@ -73,9 +73,9 @@
                     </div>
                 </div>
             </form>
-            <mat-table #table [dataSource]="dataSource">
+            <mat-table #table [dataSource]="dataSource" matSort>
                 <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef>{{disCol}}
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>{{disCol}}
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <!-- <mat-checkbox matTooltip="select all in row" *ngIf="disCol !='Student'"
