--- a/src/app/modules/globaladmin/reportconfigitem/reportconfigitem.component.scss
+++ b/src/app/modules/globaladmin/reportconfigitem/reportconfigitem.component.scss
@@ -1,11 +1,14 @@
-mat-form-field{
+mat-form-field,button{
     flex:1 1 100%;
     margin-right: 15px;
     
 }
 
-.mat-column-DisplayName,.mat-column-Formula,.mat-column-ReportName,.mat-column-TableNames{
-    flex: 1 1 200px;
+.mat-column-DisplayName,.mat-column-Formula,.mat-column-ReportName{
+    flex: 1 1 150px;
+}
+.mat-column-TableNames{
+    flex: 1 1 250px;
 }
 .mat-column-ColumnSequence{
     flex:1 1 50px;
